[tool.poetry]
name = "opencalm-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "opencalm_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
accelerate = "0.15.0"
transformers = "4.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
